# browser-harness

./: .env.example  .gitignore  .gitmodules  .no-mistakes.yaml  AGENTS.md  CLAUDE.md  MODELS.md  README.md  SKILL.md  _compat.py  _ipc.py  admin.py  daemon.py  harness_smoke.py  helpers.py  install.md  ipc.py  launch-harness-chrome.ps1  launch.py  public_site_audit.py  pyproject.toml  rollout_audit.py  run.py  run_browser_observatory.py  test_dialog_auto_dismiss.py  test_js.py  test_run.py  test_transport.py  transport.py
.agents/plugins/: marketplace.json
.github/: renovate.json5  upstream-sync-state.json
.github/workflows/: dupehound.yml  renovate.yml
agent-workspace/: CEILING_DECISIONS.md  HUMAN_BEHAVIOR_SIMULATION_REPORT.md  HUMAN_SIM_VALIDATION.md  IMPLEMENTATION_REVIEW_FOR_GEMINI.md  SMOKE.md  agent_helpers.py  content_extraction.py  reviewops_retriever_invocation_template.py
hermes/: SKILL.md
interaction-skills/: captcha-oracle.md  clipboard.md  connection.md  content-extraction.md  cross-origin-iframes.md  downloads.md  forms.md  headless-automation.md  make-video.md  min-browser.md  network-requests.md  observations.md  prerendering.md  profile-sync.md  react-controlled-inputs.md  screenshots.md  tabs.md  video-template.html  webmcp.md
templates/: browser-evidence-packet.json  browser-evidence-packet.md
tests/: test_daemon.py  test_doctor.py  test_harness_smoke.py  test_marker_evaluation.py  test_profile_observatory.py  test_public_site_audit.py  test_rollout_audit.py  test_run.py  test_run_browser_observatory.py  test_setup.py  test_transport.py
(+251 files in other folders)
